<resources>
    <string name="app_name">GenproPrioritas</string>
    <string name="profile_anggota_text">Profile Anggota</string>
    <string name="list_bisnis">List bisnis</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_form">Email : </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">belum punya akun?</string>
    <string name="nama">Nama</string>
    <string name="example_user_name">Fulan bin Fulan</string>
    <string name="example_user_email">fulankeren@gmail.com</string>
    <string name="profile_umum">Profile Umum</string>
    <string name="profile_domisili">Profile Domisili</string>
    <string name="profile_ktp">Profile KTP</string>
    <string name="edit_profile">edit profile</string>
    <string name="edit_profile_domisili">Edit Profile Domisili</string>
    <string name="edit_profile_umum">Edit Profile Umum</string>
    <string name="edit_profile_ktp">Edit Profile KTP</string>
    <string name="simpan_perubahan">Simpan perubahan</string>
    <string name="user_name">User name</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="kembali">kembali</string>
    <string name="network_error">Network error</string>
    <string name="cek_koneksi">cek koneksi internet anda dan ulang kembali..</string>
    <string name="spinner_profile">Spinner Profile</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="profile_qr_code">Profile QR Code</string>
    <string name="no_qr_code">No QR Code</string>
    <string name="simpan">simpan</string>
    <string name="no_bisnis_warning">Anda belum memiliki bisnis dan usaha yang terdaftar Masukan bisnis dan usaha anda</string>
    <string name="genpro_no_id">genpro - no ID</string>
    <string name="nama_">Nama :</string>
    <string name="status_">Status :</string>
    <string name="masa_aktif_">Masa aktif :</string>
    <string name="selengkapnya">selengkapnya</string>
    <string-array name="provinsi">
        <item>Aceh</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Barat</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumatera Selatan</item>
        <item>Bengkulu</item>
        <item>Lampung</item>
        <item>Kepulauan Bangka Belitung</item>
        <item>Kepulauan Riau</item>
        <item>DKI Jakarta</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Daerah Istimewa</item>
        <item>Jawa Timur</item>
        <item>Banten</item>
        <item>Bali</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Gorontalo</item>
        <item>Sulawesi Barat</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Papua</item>
        <item>Papua Barat</item>

    </string-array>
    <string-array name="ACEH">
        <item>KAB. ACEH BARAT</item>
        <item>KAB. ACEH BESAR</item>
        <item>KAB. ACEH SELATAN</item>
        <item>KAB. ACEH TIMUR</item>
        <item>KAB. ACEH TENGAH</item>
        <item>KAB. ACEH UTARA</item>
        <item>KAB. PIDIE</item>
        <item>KAB. ACEH TENGGARA</item>
        <item>KAB. ACEH SINGKIL</item>
        <item>KAB. BIREUEN</item>
        <item>KAB. SIMEULUE</item>
        <item>KAB. ACEH BARAT DAYA</item>
        <item>KAB. ACEH TAMIANG</item>
        <item>KAB. ACEH JAYA</item>
        <item>KAB. GAYO LUES</item>
        <item>KAB. NAGAN RAYA</item>
        <item>KAB. BENER MERIAH</item>
        <item>KAB. PIDIE JAYA</item>
        <item>KOTA BANDA ACEH</item>
        <item>KOTA SABANG</item>
        <item>KOTA LHOKSEUMAWE</item>
        <item>KOTA LANGSA</item>
        <item>KOTA SUBULUSSALAM</item>
    </string-array>
    <string-array name="SUMATERA_UTARA">
        <item>KAB. ASAHAN</item>
        <item>KAB. DELI SERDANG</item>
        <item>KAB. KARO</item>
        <item>KAB. LABUHAN BATU</item>
        <item>KAB. LANGKAT</item>
        <item>KAB. NIAS</item>
        <item>KAB. SIMALUNGUN</item>
        <item>KAB. TAPANULI SELATAN</item>
        <item>KAB. TAPANULI TENGAH</item>
        <item>KAB. TAPANULI UTARA</item>
        <item>KAB. DAIRI</item>
        <item>KAB. MANDAILING NATAL</item>
        <item>KAB. TOBA SAMOSIR</item>
        <item>KAB. HUMBANG HASUNDUTAN</item>
        <item>KAB. NIAS SELATAN</item>
        <item>KAB. PAKPAK BHARAT</item>
        <item>KAB. SAMOSIR</item>
        <item>KAB. SERDANG BEDAGAI</item>
        <item>KAB. BATU BARA</item>
        <item>KAB. PADANG LAWAS UTARA</item>
        <item>KAB. PADANG LAWAS</item>
        <item>KAB. LABUHANBATU SELATAN</item>
        <item>KAB. LABUHANBATU UTARA</item>
        <item>KAB. NIAS UTARA</item>
        <item>KAB.NIAS BARAT</item>
        <item>KOTA MEDAN</item>
        <item>KOTA PEMATANG SIANTAR</item>
        <item>KOTA SIBOLGA</item>
        <item>KOTA BINJAI</item>
        <item>KOTA. TANJUNG BALAI</item>
        <item>KOTA TEBING TINGGI</item>
        <item>KOTA PADANG SIDEMPUAN</item>
        <item>KOTA GUNUNGSITOLI</item>
    </string-array>
    <string-array name="SUMATERA_BARAT">
        <item>KOTA BUKITTINGGI</item>
        <item>KOTA PADANG</item>
        <item>KOTA PARIAMAN</item>
        <item>KAB. AGAM</item>
        <item>KAB. LIMA PULUH KOTA</item>
        <item>KAB. PADANG PARIAMAN</item>
        <item>KAB. PASAMAN</item>
        <item>KAB. PESISIR SELATAN</item>
        <item>KAB. SIJUNJUNG</item>
        <item>KAB. SOLOK</item>
        <item>KAB. TANAH DATAR</item>
        <item>KAB. KEPULAUAN MENTAWAI</item>
        <item>KAB. DHARMASRAYA</item>
        <item>KAB. PASAMAN BARAT</item>
        <item>KAB. SOLOK SELATAN</item>
        <item>KOTA PADANGPANJANG</item>
        <item>KOTA PAYAKUMBUH</item>
        <item>KOTA SAWAHLUNTO</item>
        <item>KOTA SOLOK</item>
    </string-array>
    <string-array name="RIAU">
        <item>KAB. BENGKALIS</item>
        <item>KAB. INDRAGIRI HULU</item>
        <item>KAB. KAMPAR</item>
        <item>KAB. INDRAGIRI HILIR</item>
        <item>KAB. KUATAN SINGINGI</item>
        <item>KAB. PELALAWAN</item>
        <item>KAB. ROKAN HULU</item>
        <item>KAB. ROKAN HILIR</item>
        <item>KAB. SIAK</item>
        <item>KAB. KEPULAUAN MERANTI</item>
        <item>KOTA PEKANBARU</item>
        <item>KOTA DUMAI</item>
    </string-array>
    <string-array name="JAMBI">
        <item>KAB. BATANG HARI</item>
        <item>KAB. BUNGO</item>
        <item>KAB. MERANGIN</item>
        <item>KAB. TANJUNG JABUNG BARAT</item>
        <item>KAB. KERINCI</item>
        <item>KAB. TEBO</item>
        <item>KAB. MUARO JAMBI</item>
        <item>KAB. SAROLANGUN</item>
        <item>KAB. TANJUNG JABUNG TIMUR</item>
        <item>KOTA JAMBI</item>
        <item>KOTA SUNGAI PENUH</item>
        <item>KAB. KARIMUN</item>
        <item>KAB. NATUNA</item>
        <item>KAB. LINGGA</item>
        <item>KAB. KEPULAUAN ANAMBAS</item>
        <item>KOTA BATAM</item>
        <item>KOTA TANJUNG PINANG</item>
        <item>KAB. BANYUASIN</item>
    </string-array>
    <string-array name="SUMATERA_SELATAN">
        <item>KAB. LAHAT</item>
        <item>KAB. MUARA ENIM</item>
        <item>KAB. MUSI BANYUASIN</item>
        <item>KAB. MUSI RAWAS</item>
        <item>KAB. OGAN KOMERING ILIR</item>
        <item>KAB. OGAN KOMERING ULU</item>
        <item>KAB. OGAN ILIR</item>
        <item>KAB. OGAN KOMERING ULU TIMUR</item>
        <item>KAB. OGAN KOMERING ULU SELATAN</item>
        <item>KAB. EMPAT LAWANG</item>
        <item>KAB. PENUKAI ABAB LEMATANG ILIR</item>
        <item>KAB. MUSI RAWAS UTARA</item>
        <item>KOTA PALEMBANG</item>
        <item>KOTA PRABUMULIH</item>
        <item>KOTA LUBUK LINGGAU</item>
        <item>KOTA PAGAR ALAM</item>
    </string-array>
    <string-array name="BENGKULU">
        <item>KAB. BENGKULU SELATAN</item>
        <item>KAB. BENGKULU UTARA</item>
        <item>KAB. REJANG LEMBONG</item>
        <item>KAB. KAUR</item>
        <item>KAB. SELUMA</item>
        <item>KAB. MUKO-MUKO</item>
        <item>KAB. KEPAHIANG</item>
        <item>KAB. LEBONG</item>
        <item>KAB. BENGKULU TENGAH</item>
        <item>KOTA BENGKULU</item>
    </string-array>
    <string-array name="LAMPUNG">
        <item>KAB. LAMPUNG SELATAN</item>
        <item>KAB. LAMPUNG TENGAH</item>
        <item>KAB. LAMPUNG UTARA</item>
        <item>KAB. LAMPUNG BARAT</item>
        <item>KAB. TANGGAMUS</item>
        <item>KAB. TULANG BAWANG</item>
        <item>KAB. LAMPUNG TIMUR</item>
        <item>KAB. WAY KANAN</item>
        <item>KAB. PESAWARAN</item>
        <item>KAB. PRINGSEWU</item>
        <item>KAB. MESUJI</item>
        <item>KAB. TULANGBAWANG BARAT</item>
        <item>KAB. PESISIR BARAT</item>
        <item>KOTA BANDAR LAMPUNG</item>
        <item>KOTA METRO</item>
    </string-array>
    <string-array name="KEPULAUAN_BANGKA_BELITUNG">
        <item>KAB. BANGKA</item>
        <item>KAB. BELITUNG</item>
        <item>KAB. BANGKA BARAT</item>
        <item>KAB. BANGKA TENGAH</item>
        <item>KAB. BANGKA SELATAN</item>
        <item>KAB. BELITUNG TIMUR</item>
        <item>KOTA PANGKAL PINANG</item>
    </string-array>
    <string-array name="KEPULAUAN_RIAU">
        <item>KAB. BINTAN</item>
        <item>KOTA BATAM</item>
    </string-array>
    <string-array name="DKI_JAKARTA">
        <item>KOTA ADMINISTRATIF JAKARTA BARAT</item>
        <item>KOTA ADMINISTRATIF JAKARTA PUSAT</item>
        <item>KOTA ADMINSTRATIF JAKARTA UTARA</item>
        <item>KOTA ADMINISTRATIF JAKARTA TIMUR</item>
        <item>KOTA ADMINISTRATIF JAKARTA SELATAN</item>
        <item>KAB. ADMINISTRATIF KEPULAUAN SERIBU</item>
    </string-array>
    <string-array name="JAWA_BARAT">
        <item>KAB. BOGOR</item>
        <item>KAB. SUKABUMI</item>
        <item>KAB. CIANJUR</item>
        <item>KAB. BANDUNG</item>
        <item>KAB. GARUT</item>
        <item>KAB. TASIKMALAYA</item>
        <item>KAB. CIAMIS</item>
        <item>KAB. KUNINGAN</item>
        <item>KAB. CIREBON</item>
        <item>KAB. SUMEDANG</item>
        <item>KAB. INDRAMAYU</item>
        <item>KAB. SUBANG</item>
        <item>KAB. PURWAKARTA</item>
        <item>KAB. KARAWANG</item>
        <item>KAB. BEKASI</item>
        <item>KAB. BANDUNG BARAT</item>
        <item>KAB. PANGANDARAN</item>
        <item>KOTA BOGOR</item>
        <item>KOTA SUKABUMI</item>
        <item>KOTA BANDUNG</item>
        <item>KOTA CIREBON</item>
        <item>KOTA BEKASI</item>
        <item>KOTA DEPOK</item>
        <item>KOTA CIMAHI</item>
        <item>KOTA TASIKMALAYA</item>
        <item>KOTA BANJAR</item>
        <item>KAB. MAJALENGKA</item>
    </string-array>
</resources>