<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="42dp"
            android:paddingTop="42dp"
            android:background="@drawable/round_shape_white"
            android:gravity="center">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/ic_access_point_black"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_network_error"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/network_error"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="36dp"/>

                <TextView
                    android:id="@+id/txt_network_error_detail"
                    app:layout_constraintTop_toBottomOf="@id/txt_network_error"
                    app:layout_constraintStart_toStartOf="@id/txt_network_error"
                    app:layout_constraintEnd_toEndOf="@id/txt_network_error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cek_koneksi"
                    android:textStyle="normal"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="18dp"/>

                <Button
                    android:id="@+id/btn_error_kembali"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    app:layout_constraintStart_toStartOf="@id/txt_network_error"
                    app:layout_constraintEnd_toEndOf="@id/txt_network_error"
                    app:layout_constraintTop_toBottomOf="@id/txt_network_error_detail"
                    android:background="@color/black"
                    android:text="@string/kembali"
                    android:textColor="@color/white"
                    android:layout_marginTop="42dp"/>



            </android.support.constraint.ConstraintLayout>





        </LinearLayout>


</RelativeLayout>