<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logins.register.RegisterActivity"
    android:background="@color/black">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="28dp"
            android:layout_marginStart="62dp"
            android:layout_marginEnd="62dp"
            android:src="@drawable/genpro_logo_white"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="28dp"
                android:paddingRight="28dp"
                android:paddingTop="42dp"
                android:paddingBottom="42dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:textStyle="bold"/>



                <EditText
                    android:id="@+id/edt_register_user_name"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparant"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="6dp"/>



                <EditText
                    android:id="@+id/edt_register_email"
                    android:layout_marginTop="36dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparant"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="6dp"/>

                <EditText
                    android:id="@+id/edt_register_password"
                    android:layout_marginTop="36dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparant"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="6dp"/>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/shape_golden_r_5"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"/>


            </LinearLayout>


        </android.support.v7.widget.CardView>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>