<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="84dp">

            <android.support.v7.widget.CardView
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:background="@color/transparant"
                app:cardCornerRadius="10dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/main_first_card"
                        android:scaleType="centerCrop"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="94dp"
                        android:layout_height="60dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/genpro_logo_white"/>

                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="32dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_anggota_text"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txt_main_nama"
                        android:layout_marginTop="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nama : "
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/txt_main_email"
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_form"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/txt_main_status"
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Status :"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/txt_main_masa_aktif"
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Masa aktif : "
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_width="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_height="wrap_content"
                            android:text="@string/list_bisnis"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="18sp"/>

                        <ImageView
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_more_vert_black_24dp"
                            />


                    </android.support.constraint.ConstraintLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/transparant"/>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>